--- a/projects/storefront/src/app/account/components/account-stats-bar/account-stats-bar.component.html
+++ b/projects/storefront/src/app/account/components/account-stats-bar/account-stats-bar.component.html
@@ -1,10 +1,6 @@
 <section class="stats-container" aria-label="Account statistics">
   <div class="stats-grid">
-    <div 
-      *ngFor="let stat of stats; let i = index" 
-      class="stat-card"
-      [style.animation-delay]="(i * 100) + 'ms'"
-    >
+    <div *ngFor="let stat of stats; let i = index" class="stat-card" [style.animation-delay]="(i * 100) + 'ms'">
       <div class="card-content">
         <div class="flex-container">
           <!-- Icon -->
@@ -22,4 +18,4 @@
       </div>
     </div>
   </div>
-</section> 
+</section>
