--- a/projects/storefront/src/app/shared/components/featured-product-card/featured-product-card.component.html
+++ b/projects/storefront/src/app/shared/components/featured-product-card/featured-product-card.component.html
@@ -5,7 +5,7 @@
   <button type="button"
     [attr.aria-label]="favorite ? 'Remove ' + product.name + ' from favorites' : 'Add ' + product.name + ' to favorites'"
     class="absolute top-4 right-4 z-20 rounded-full p-2 bg-white/80 dark:bg-black/60 shadow-md border border-white/40 dark:border-black/40 transition-colors duration-200 focus-visible:ring-2 focus-visible:ring-primary/60"
-    (click)="toggleFavorite()" tabindex="0">
+    (click)="toggleWishlist(product)" tabindex="0">
     <mat-icon [class.is-favorite]="favorite">{{ favorite ? 'favorite' : 'favorite_border' }}</mat-icon>
     <span class="sr-only">{{ favorite ? "Favorited" : "Not favorited" }}</span>
   </button>
